# UniversityCoding

./: .gitignore  CMakeLists.txt  README.md
Task1A/: CMakeLists.txt  README.md  Task1A.cpp
Task2A/: CMakeLists.txt  README.md  Task2A.cpp
Task3A/: CMakeLists.txt  README.md  Task3A.cpp
Task4B/: CMakeLists.txt  README.md  Task4B.cpp  peglib.h
Task5/: CMakeLists.txt  Task5.cpp
